overflow problem solved

--- a/responsive.css
+++ b/responsive.css
@@ -209,6 +209,10 @@
     gap: 30px;
   }
 
+  .slide-title {
+    font-size: 2rem;
+  }
+
   .client-img {
     flex: 0 0 calc(50% - 30px);
     padding: 15px;
@@ -240,6 +244,10 @@
     .dril-seciton-2 {
       width: 100%;
     }
+
+    .dril-2[data-scroll="in"]::before {
+      opacity: 0;
+}
 }
 
 @media (max-width: 576px) {
